# Tasks-Cpp

./: README.md
SGH-Tasks-Cpp/Finale-Homework-2/: CMakeLists.txt  main.cpp
SGH-Tasks-Cpp/Finale-Homework-3/: CMakeLists.txt  main.cpp
SGH-Tasks-Cpp/Finale-Homework-4/: CMakeLists.txt  main.cpp
SGH-Tasks-Cpp/Finale-Homework-4/data/: data1.xlsx
